#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(amule-emc, 0.5, wuischke@amule.org)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR(src/amule-emc.cpp)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_UINT64_T

AC_PROG_INSTALL

AC_OUTPUT(Makefile src/Makefile)
